# sauce

./: pyproject.toml
src/: auth.py  server.py  utility.py
src/static/: app.js
src/templates/: auth_login.jinja2  index.jinja2
src/views/: auth.py  info.py
src/vue/: info.vue
