[tool.poetry]
name = "sauce"
version = "0.1.0"
description = ""
authors = ["Skogen <muumlover@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.9.3"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.17.8"}
sanic-jwt = "^1.7.0"
sanic-jinja2 = "^0.10.0"
sanic-session = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
